--- a/_config.yml
+++ b/_config.yml
@@ -8,26 +8,26 @@
 
 # Site settings
 # title appears in the header
-title: workshop-template
+title: Intro to NLP - PDW
 # description and keywords for meta tags
-description: "Create an OER workshop website quick and easy!"
-keywords: "workshops, OER, Open Education, websites, gh-pages, jekyll"
+description: "2-part workshop on Natural Language Processing (NLP) - Field Center of Entrepreneurship, 6 and 13 November"
+keywords: "NLP, workshop, Open Education, language processing"
 
 # author settings for cc-by, appears in the footer
-author: evan will
-pub_year: 2018
-github_username: evanwill
+author: Roman Jurowetzki
+pub_year: 2020
+github_username: RJurow
 
 # add the full url for the github repository
-repo: "https://github.com/evanwill/workshop-template"
+repo: "https://github.com/RJuro/NLP-pdw-baruch"
 
 # site urls
 # add the url for the domain,
 # on gh-pages follow the pattern: https://username.github.io 
-url: https://evanwill.github.io
+url: https://rjurow.github.io
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
-baseurl: /workshop-template
+baseurl: /NLP-pdw-baruch
 
 # add google analytics if desired (optional)
 # if blank, it will be ignored
