--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ repo: "https://github.com/RJuro/NLP-pdw-baruch"
 # site urls
 # add the url for the domain,
 # on gh-pages follow the pattern: https://username.github.io 
-url: https://rjurow.github.io
+url: https://rjuro.github.io
 # add subsection of the domain,
 # on gh-pages this is a / followed by the name of the repository
 baseurl: /NLP-pdw-baruch
